# TouristEquipmentRental_PP

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.02cfa3b  FileOperations.cpp  FileOperations.h  ReservationEquipment.cpp  ReservationEquipment.h  StringOperations.h  TouristEquipmentRental.sln  adsadsa  equipment.cpp  equipment.h  filedatabase.cpp  filedatabase.h  helpers.cpp  helpers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reservation.cpp  reservation.h  user.cpp  user.h
.github/workflows/: pullRequestBuildCheck.yml  pull_request.yml
TouristEquipmentRental/: DatabaseOperator.cpp  DatabaseOperator.h  Equipment.cpp  Equipment.h  FileDatabase.cpp  FileDatabase.h  FileOperations.cpp  GlobalOperator.cpp  GlobalOperator.h  LoginPanel.cpp  LoginPanel.h  LoginView.h  PrimaryView.cpp  PrimaryView.h  PrimmaryView.cpp  PrimmaryView.h  ProgramFlow.cpp  ProgramFlow.h  RegisterView.cpp  RegisterView.h  RentEquipmentView.cpp  RentEquipmentView.h  Reservation.cpp  Reservation.h  ReservationEquipment.cpp  ReservationEquipment.h  SignInUpView.cpp  SignInUpView.h  StringOperations.cpp  TouristEquipmentRental.cpp  TouristEquipmentRental.vcxproj  TouristEquipmentRental.vcxproj.filters  UnitOfView.cpp  UnitOfView.h  User.cpp  User.h  UserPanel.cpp  UserPanel.h  equipment.txt  reservation_equimpent.txt  (+2 more)
